# HRI-smait

./: .coverage  .env.example  .gitignore  CLAUDE.md  DEMO_FLOW.md  INTERVIEW_GUIDE.md  LAB_PLAN.md  README.md  REBUILD_PROMPT.md  REBUILD_PROMPT_FINAL.md  pyproject.toml  requirements.txt  run_jackie.py  run_tests.py
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
docs/: CAE_INTEGRATION_GUIDE.md  JACKIE_HARDWARE.md  abstract-explanation.md  architecture-diagram.html  architecture-v2.html  isaac_sim_setup.md
isaac_sim_tests/: README.md  config.yaml  run_test.py  setup.py
isaac_sim_tests/domain_randomization/: __init__.py  articulation.py  audio2face_client.py  av_delay.py  noise_mixer.py
isaac_sim_tests/metrics/: __init__.py  collector.py
look2hear/models/: dolphin.py  video_compoent.py
scripts/: download_weights.py  generate_test_audio.py  lab_runbook.sh  setup_lab.sh  smoke_all_models.py  smoke_dolphin.py  smoke_gaze.py  smoke_parakeet.py  smoke_torch.py  smoke_tts.py  smoke_vad.py  test_e2e_pipeline.py  track_metrics.py
smait/: __init__.py  demo.py  main.py
smait/behavior/: __init__.py  behaviors.py  tree.py
smait/connection/: __init__.py  chassis_client.py  manager.py  protocol.py
smait/core/: __init__.py  config.py  events.py
smait/dialogue/: __init__.py  manager.py
smait/navigation/: __init__.py  map_manager.py  nav_controller.py  poi_knowledge_base.py  wayfinding_manager.py
smait/output/: __init__.py  tts.py
smait/perception/: __init__.py  asd.py  asr.py  dolphin_separator.py  engagement.py  eou_detector.py  face_tracker.py  gaze.py  laser_asd.py  laser_asd1.py  lip_extractor.py  parakeet_asr.py  semantic_vad.py  transcriber.py  verifier.py
smait/sensors/: __init__.py  aec.py  audio_pipeline.py  network_source.py  network_sources.py  sources.py  video_pipeline.py
smait/session/: manager.py
smait/utils/: INTEGRATION_GUIDE.md  __init__.py  data_logger.py  metrics.py  test_harness.py
tests/: conftest.py
tests/unit/: test_aec.py  test_audio_pipeline.py  test_barge_in.py  test_chassis_client.py  test_connection_manager.py  test_display_dispatch.py  test_dolphin_separator.py  test_engagement.py  test_eou_detector.py  test_gaze.py  (+9 more)
(+82 files in other folders)
